# fern

./: .gitignore  PUBLISHING.md  README.md  pyproject.toml  requirements.txt
api/: Dockerfile  README.md  deploy.sh  extract.py  main.py  models.py  rate_limit.py  requirements.txt
scripts/: install.sh
src/fern/: .env.example  __init__.py  __main__.py  banner.py  cli.py  config.py  dedupe.py  drafts.py  migrate.py  models.py  report.py  settings.py  telemetry.py
src/fern/extractor/: api_client.py  claude.py
src/fern/gmail/: auth.py  client.py  parse.py  search.py
src/fern/ui/: parser.py  server.py
src/fern/ui/static/: app.js  style.css
src/fern/ui/templates/: index.html
