[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fern-audit"
version = "0.2.0"
description = "Find and cancel forgotten subscriptions via Gmail"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "flask>=3.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
fern = "fern.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fern = ["ui/templates/*", "ui/static/*", ".env.example"]
